pequenas mudanças que fiz na aula de matematica

--- a/grid.html
+++ b/grid.html
@@ -7,12 +7,12 @@
     <title>ParqueGermania(Grid)</title>
 </head>
 <body class="container">
-    <header class="header"></header>
+    <header> Parque Germania</header>
     <main></main>
-    <footer>
-        <section></section>
-        <section></section>
-        <section></section>
+    <footer class="containerfooter">
+        <section class="section1"></section1>
+        <section class="section2"></section2>
+        <section class="section3"></section>
     </footer>
     
 </body>
